@@ -3422,6 +3422,15 @@ argument_list|(
 name|regionInfo
 argument_list|)
 expr_stmt|;
+name|s
+operator|.
+name|setClosing
+argument_list|(
+name|serverName
+argument_list|,
+name|setOffline
+argument_list|)
+expr_stmt|;
 name|regionsInTransition
 operator|.
 name|put
@@ -3432,15 +3441,6 @@ name|getRegionName
 argument_list|()
 argument_list|,
 name|s
-argument_list|)
-expr_stmt|;
-name|s
-operator|.
-name|setClosing
-argument_list|(
-name|serverName
-argument_list|,
-name|setOffline
 argument_list|)
 expr_stmt|;
 block|}
@@ -4123,6 +4123,7 @@ block|}
 block|}
 block|}
 block|}
+comment|/*    * State of a Region.    * Used while regions are making transitions from unassigned to assigned to    * opened, etc.    */
 specifier|private
 specifier|static
 class|class
@@ -4146,36 +4147,42 @@ init|=
 literal|null
 decl_stmt|;
 specifier|private
+specifier|volatile
 name|boolean
 name|unassigned
 init|=
 literal|false
 decl_stmt|;
 specifier|private
+specifier|volatile
 name|boolean
 name|assigned
 init|=
 literal|false
 decl_stmt|;
 specifier|private
+specifier|volatile
 name|boolean
 name|pending
 init|=
 literal|false
 decl_stmt|;
 specifier|private
+specifier|volatile
 name|boolean
 name|closing
 init|=
 literal|false
 decl_stmt|;
 specifier|private
+specifier|volatile
 name|boolean
 name|closed
 init|=
 literal|false
 decl_stmt|;
 specifier|private
+specifier|volatile
 name|boolean
 name|offlined
 init|=
