@@ -118,6 +118,8 @@ Release 0.19.0 - Unreleased
    HBASE-543,  HBASE-1046, HBase-1051 A region's state is kept in several places
                in the master opening the possibility for race conditions
    HBASE-1072  Change Thread.join on exit to a timed Thread.join
+   HBASE-1098  IllegalStateException: Cannot set a region to be closed it it
+               was not already marked as closing
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
